--- a/notebooks/model_selection.ipynb
+++ b/notebooks/model_selection.ipynb
@@ -2461,6 +2461,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.to_csv(\"/Users/gabinmberikongo/code/projet/loan_credit/data/selected_var_data.csv\", index=False)\n",
+    "y_df = pd.DataFrame({\"loan_status\": y})\n",
+    "y_df.to_csv(\"/Users/gabinmberikongo/code/projet/loan_credit/data/target.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
